----------
v6.2.2-git
----------

[mms] Fix updating viewport immediately after deleting messages on POP3
      servers.


------
v6.2.1
------

[mjr] Fix iTip handling when recurrence exceptions are present (Bug #13399).
[mms] Fix displaying Sent mailbox label when multiple sent-mail mailboxes are
      defined.
[mms] Fix advanced search in all mailboxes if virtual folders or remote
      accounts exist (Bug #13384).
[mms] Fix regression in automatically expanding deeply nested mailboxes in the
      dynamic folder list.
[mms] Fix regression where containers could not be moved via drag/drop in
      dynamic view.
[mms] Don't perform purge sentmail login task unless at least one sentmail
      mailbox exists.
[mms] Don't perform purge Spam login task unless Spam mailbox exists.
[mms] Fix dragging a mailbox to the base level in dynamic view.
[mms] Add ability to drag/drop text to dynamic HTML compose window on Chrome
      and IE.
[mms] Re-enable drag/drop of text to dynamic plaintext compose window (Bug
      #13281).


------
v6.2.0
------

[mms] Fix some regressions in linked attachments behavior (Bug #13232).
[mjr] Fix fatal error when printing empty HTML attachments (Bug #13322).


---------
v6.2.0RC1
---------

[mms] Fix handling image attachments when added via the HTML editor Image
      dialog.


-----------
v6.2.0beta3
-----------

[mms] Fix saving attachments to sent-mail message in smartmobile view (Bug
      #13257).
[mms] Remove the 'default_msg_charset' preference.
[mms] Rewritten folder list code for dynamic view.
[mms] Fix saving expanded state when expanding all mailboxes when all mailboxes
      are already cached in the browser.


-----------
v6.2.0beta2
-----------

[mms] Allow drag/drop to HTML compose body work with text data.
[mms] Cache mailbox exists results in the current access.


-----------
v6.2.0beta1
-----------

[jan] Add Japanese help file (Hiromi Kimura <hiromi@tac.tsukuba.ac.jp>).