@@ -33,6 +33,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
+* [mms] Fix expiring session cached mailbox data when mailbox information changes.
 * [mms] Fix updating viewport immediately after deleting messages on POP3 servers.
  </notes>
  <contents>
@@ -3721,6 +3722,7 @@
    <date>2014-08-04</date>
    <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
    <notes>
+* [mms] Fix expiring session cached mailbox data when mailbox information changes.
 * [mms] Fix updating viewport immediately after deleting messages on POP3 servers.
    </notes>
   </release>
